--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+/public/packs
+/public/packs-test
+/node_modules
+/bin/
